--- a/public/js/plugins/mining/mining.html
+++ b/public/js/plugins/mining/mining.html
@@ -1,8 +1,18 @@
 <div class="legend">Mining</div>
 <div class="row">
-    <div class="col-lg-4">
+    <div class="col-lg-3 col-md-3 col-sm-3">
         <div>
-            <div class="box">
+            <div class="box &.height-override">
+                <h4>Block Reward</h4>
+                <div class="inner">
+                    <p>50 VTC</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-3">
+        <div>
+            <div class="box &.height-override">
                 <h4>Widget</h4>
                 <div class="inner">
                     <p>$3.40</p>
@@ -11,9 +21,9 @@
             </div>
         </div>
     </div>
-    <div class="col-lg-4">
+    <div class="col-lg-3 col-md-3 col-sm-3">
         <div>
-            <div class="box">
+            <div class="box &.height-override">
                 <h4>Widget</h4>
                 <div class="inner">
                     <p>$3.40</p>
@@ -22,9 +32,21 @@
             </div>
         </div>
     </div>
-    <div class="col-lg-4">
+</div>
+<div class="row">
+    <div class="col-lg-6 col-md-6 col-sm-6">
         <div>
-            <div class="box">
+            <div class="box &.height-override">
+                <h4>One Click Miner</h4>
+                <div class="inner">
+                    <a href="=">$3.40</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-6 col-md-6 col-sm-6">
+        <div>
+            <div class="box &.height-override">
                 <h4>Widget</h4>
                 <div class="inner">
                     <p>$3.40</p>
