--- a/public/js/plugins/market/market.html
+++ b/public/js/plugins/market/market.html
@@ -1,35 +1,48 @@
-<div class="legend">Market</div>
+<div class="legend">
+    <div>
+        <div class="pull-left">Market</div>
+        <select class="form-control" ng-options="key as key for (key, value) in currencys" ng-model="currency" ng-change="init()">
+        </select>
+        <span class="pull-right">{{ marketData.lastUpdated }}</span>
+    </div>
+</div>
 <div class="row">
     <div class="col-lg-4">
-        <div>
-            <div class="box">
-                <h4>Widget</h4>
-                <div class="inner">
-                    <p>$3.40</p>
-                    <span>^ 5.54%</span>
-                </div>
+        <div class="box">
+            <h4>1 Vertcoin</h4>
+            <div class="inner">
+                <p class="pull-right corner" ng-class="{'up': marketData.hourChange > 0, 'down': marketData.hourChange < 0}">
+                    {{ marketData['percent_change_1h'] }} %
+                    <span class="changes">
+                        <span ng-class="{'up': marketData.dayChange > 0, 'down': marketData.dayChange  < 0}">
+                            D {{ marketData['percent_change_24h'] }} %&nbsp;&nbsp;
+                        </span>
+                        <span ng-class="{'up': marketData.weekChange  > 0, 'down': marketData.weekChange < 0}">
+                            W {{ marketData['percent_change_7d'] }} %</span>
+                    </span>
+                </p>
+                &nbsp;
+                <p class="pull-right">
+                     {{ currencys[currency].token }} {{ marketData[currencys[currency].price] | number: 2 }}
+                </p>
             </div>
         </div>
     </div>
     <div class="col-lg-4">
-        <div>
-            <div class="box">
-                <h4>Widget</h4>
-                <div class="inner">
-                    <p>$3.40</p>
-                    <span>^ 5.54%</span>
-                </div>
+        <div class="box">
+            <h4>
+                <span class="pull-left">Rank {{ marketData.rank}}</span>
+                Market Cap</h4>
+            <div class="inner">
+                <p>{{ currencys[currency].token }} {{  marketData[currencys[currency].marketCap] | number: 0 }}</p>
             </div>
         </div>
     </div>
     <div class="col-lg-4">
-        <div>
-            <div class="box">
-                <h4>Widget</h4>
-                <div class="inner">
-                    <p>$3.40</p>
-                    <span>^ 5.54%</span>
-                </div>
+        <div class="box">
+            <h4>Volume (24hr)</h4>
+            <div class="inner">
+                <p>{{ currencys[currency].token }} {{ marketData[currencys[currency].volume] | number: 0 }}</p>
             </div>
         </div>
     </div>
