added mining info

--- a/public/js/plugins/blockchain/blockchain.html
+++ b/public/js/plugins/blockchain/blockchain.html
@@ -1,6 +1,8 @@
-<div class="legend">
-    Blockchain
-    <span class="pull-right">{{ chainData.lastUpdated }}</span>
+<div class="wrapper-top">
+    <div class="legend">
+        Blockchain
+        <span class="pull-right">{{ chainData.lastUpdated }}</span>
+    </div>
 </div>
 <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-4">
