--- a/public/js/plugins/market/market.html
+++ b/public/js/plugins/market/market.html
@@ -1,9 +1,12 @@
-<div class="legend">
-    <div>
-        <div class="pull-left">Market</div>
-        <select class="form-control" ng-options="key as key for (key, value) in currencys" ng-model="currency" ng-change="init()">
-        </select>
-        <span class="pull-right">{{ marketData.lastUpdated }}</span>
+<div class="wrapper-top">
+    <div class="legend">
+        <div>
+            <div class="pull-left">Market</div>
+            <select class="form-control" ng-options="key as key for (key, value) in currencys" ng-model="currency"
+                    ng-change="init()">
+            </select>
+            <span class="pull-right">{{ marketData.lastUpdated }}</span>
+        </div>
     </div>
 </div>
 <div class="row">
@@ -11,7 +14,8 @@
         <div class="box">
             <h4>1 Vertcoin</h4>
             <div class="inner">
-                <p class="pull-right corner" ng-class="{'up': marketData.hourChange > 0, 'down': marketData.hourChange < 0}">
+                <p class="pull-right corner"
+                   ng-class="{'up': marketData.hourChange > 0, 'down': marketData.hourChange < 0}">
                     {{ marketData['percent_change_1h'] }} %
                     <span class="changes">
                         <span ng-class="{'up': marketData.dayChange > 0, 'down': marketData.dayChange  < 0}">
@@ -23,7 +27,7 @@
                 </p>
                 &nbsp;
                 <p class="pull-right">
-                     {{ currencys[currency].token }} {{ marketData[currencys[currency].price] | number: 2 }}
+                    {{ currencys[currency].token }} {{ marketData[currencys[currency].price] | number: 2 }}
                 </p>
             </div>
         </div>
@@ -34,7 +38,7 @@
                 <span class="pull-left">Rank {{ marketData.rank}}</span>
                 Market Cap</h4>
             <div class="inner">
-                <p>{{ currencys[currency].token }} {{  marketData[currencys[currency].marketCap] | number: 0 }}</p>
+                <p>{{ currencys[currency].token }} {{ marketData[currencys[currency].marketCap] | number: 0 }}</p>
             </div>
         </div>
     </div>
