added wallet info

--- a/public/assets/tpl/app.html
+++ b/public/assets/tpl/app.html
@@ -3,7 +3,18 @@
     <div class="marketing">
         <market-plugin></market-plugin>
         <blockchain-plugin></blockchain-plugin>
-        <mining-plugin></mining-plugin>
+
+        <div class="row">
+            <div class="col-md-6 col-sm-6 col-lg-6">
+                <wallet-plugin></wallet-plugin>
+            </div>
+            <div class="col-md-6 col-sm-6 col-lg-6">
+                <mining-plugin></mining-plugin>
+            </div>
+        </div>
     </div>
-    <footer class="footer"><p>VtAcqCUWarBYTXPFFXNBB1ikqjMsFeVaQH</p></footer>
+    <footer class="footer">
+        <p>VTC VtAcqCUWarBYTXPFFXNBB1ikqjMsFeVaQH</p>
+        <p>BTC 37EjaY53GwvxsfcxVshcjZEBcWEZukZqi5</p>
+    </footer>
 </div>
