--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,11 @@
 <html lang="en" ng-app="app">
 <head>
     <meta charset="utf-8">
+
+    <title>Vertcoin Dashboard - Real time ticker, Blockchain Information & Links to external guides/support</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge, chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta name="description=" content="A real time updated Vertcoin price ticker, realtime blockchain information, including; difficulty, blockheight and network hash rate."/>
     <meta name="google" content="notranslate" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
