--- a/public/assets/tpl/app.html
+++ b/public/assets/tpl/app.html
@@ -13,8 +13,8 @@
             </div>
         </div>
     </div>
-    <footer class="footer">
-        <p>VTC VtAcqCUWarBYTXPFFXNBB1ikqjMsFeVaQH</p>
+    <footer class="footer" ng-class="{'dark': darkTheme}">
+        <p>VTC VjwAP2w2tkoCJUhBhBMKMa9te4WzkUjkej</p>
         <p>BTC 37EjaY53GwvxsfcxVshcjZEBcWEZukZqi5</p>
     </footer>
 </div>
