--- a/public/assets/tpl/app.html
+++ b/public/assets/tpl/app.html
@@ -14,6 +14,7 @@
         </div>
     </div>
     <footer class="footer" ng-class="{'dark': darkTheme}">
+        <p class="pull-right" style="width: 255px;">This is a community driven & funded project.</p>
         <p>VTC VjwAP2w2tkoCJUhBhBMKMa9te4WzkUjkej</p>
         <p>BTC 37EjaY53GwvxsfcxVshcjZEBcWEZukZqi5</p>
     </footer>
