uglify core app files

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,6 @@
 <ng-view></ng-view>
 
 <script src="assets/js/libs.js"></script>
-<script src="assets/js/core.js"></script>
+<script src="assets/js/app.js"></script>
 </body>
 </html>
