--- a/public/assets/tpl/app.html
+++ b/public/assets/tpl/app.html
@@ -16,7 +16,7 @@
     <footer class="footer" ng-class="{'dark': darkTheme}">
         <p>VTC VjwAP2w2tkoCJUhBhBMKMa9te4WzkUjkej</p>
         <p>BTC 37EjaY53GwvxsfcxVshcjZEBcWEZukZqi5</p>
-        <p class="pull-right" style="width: 255px;">This is a community driven & funded project.</p>
+        <p class="pull-right" style="width: 255px;">This is a community driven/funded project.</p>
 
     </footer>
 </div>
