fixed wallet paper generator link

--- a/public/js/plugins/wallet/wallet.html
+++ b/public/js/plugins/wallet/wallet.html
@@ -1,9 +1,9 @@
 <div class="wrapper-top">
-    <div class="legend">Wallets</div>
+    <div class="legend" ng-class="{'dark': darkTheme}">Wallets</div>
 </div>
 <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12">
-        <div class="box height-override">
+        <div class="box height-override" ng-class="{'dark': darkTheme}">
             <div>
                 <h4>Hot Wallet</h4>
                 <div class="inner">
@@ -36,7 +36,7 @@
                 </div>
                 <div class="inner">
                     <div>
-                        <a class="pull-left" href="https://walletgenerator.net/?currency=Vertcoin#">https://walletgenerator.net/?currency=Vertcoin#</a>
+                        <a class="pull-left" href="https://vertaddress.org/">https://vertaddress.org/</a>
                         <h5>Paper Wallet Generator</h5>
                     </div>
                 </div>
