--- a/public/assets/tpl/app.html
+++ b/public/assets/tpl/app.html
@@ -1,4 +1,5 @@
 <div class="container ng-scope">
+    <!--<style-plugin></style-plugin>-->
     <div class="header clearfix"><h2 class="text-muted">Vertcoin Dashboard</h2></div>
     <div class="marketing">
         <market-plugin></market-plugin>
@@ -14,9 +15,7 @@
         </div>
     </div>
     <footer class="footer" ng-class="{'dark': darkTheme}">
-        <p>VTC VjwAP2w2tkoCJUhBhBMKMa9te4WzkUjkej</p>
+        <p>VTC VuAxQwt2oPVAZfahtdayCHvw1vLp5KTzJd</p>
         <p>BTC 37EjaY53GwvxsfcxVshcjZEBcWEZukZqi5</p>
-        <p class="pull-right" style="width: 255px;">This is a community driven/funded project.</p>
-
     </footer>
 </div>
