--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge, chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="description=" content="A real time updated Vertcoin price ticker, realtime blockchain information, including; difficulty, blockheight and network hash rate."/>
+    <meta name="keywords=" content="vertcoin halving countdown, vertcoin, vertcoin price, vertcoin blockchain, vertcoin difficulty, vertcoin blockheight, vertcoin realtime price, vertcoin wallet, vertcoin mining"/>
     <meta name="google" content="notranslate" />
+
+    <link rel="icon" type="image/png" href="assets/img/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
 
