--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,21 @@
     <link rel="icon" type="image/png" href="assets/img/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
-
+    <script>
+		(function (i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date(); a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    </script>
     <base href="/">
 </head>
 
 <body>
 <ng-view></ng-view>
 
+</body>
 <script src="assets/js/libs.js"></script>
 <script src="assets/js/app.js"></script>
-</body>
 </html>
