--- a/public/js/plugins/mining/mining.html
+++ b/public/js/plugins/mining/mining.html
@@ -22,6 +22,16 @@
                 </div>
             </div>
             <div>
+                <h4>Vertminer</h4>
+                <div class="inner">
+                    <div>
+                        <a class="pull-left" href="https://github.com/vertcoin/vertminer-nvidia">https://github.com/vertcoin/vertminer-nvidia</a>
+                        <a href="https://github.com/vertcoin/vertminer-nvidia">Guide
+                            & Setup</a>
+                    </div>
+                </div>
+            </div>
+            <div>
                 <h4>CC Miner</h4>
                 <div class="inner">
                     <div>
@@ -45,9 +55,6 @@
                         <a href="https://scanner.vtconline.org/">https://scanner.vtconline.org</a>
                     </div>
                     <div>
-                        <a href="http://vertscan1.errantshed.co.uk/">http://vertscan1.errantshed.co.uk/</a>
-                    </div>
-                    <div>
                         <a href="http://scanner1.alwayshashing.com/">http://scanner1.alwayshashing.com/</a>
                     </div>
                     <h5>Net2 Pools (Recommended for less than 100 MH/s)</h5>
@@ -56,6 +63,12 @@
                     </div>
                     <div>
                         <a href="http://scanner2.alwayshashing.com/">http://scanner2.alwayshashing.com/</a>
+                    </div>
+                    <div style="margin-top: 10px">
+                    <code><small style="font-size: 78%;">You can support this node by mining on it :) (Recommended for less than 100 MH/s)</small></code>
+                    <div>
+                        <a href="http://31.220.54.16:9181/static/">http://31.220.54.16:9181/static/</a>
+                    </div>
                     </div>
                 </div>
             </div>
