--- a/home.html
+++ b/home.html
@@ -1,86 +1,26 @@
-(function ()
-{
-	'use strict';
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <script>
+			/******************************************
+			 * Snow Effect Script- By Altan d.o.o. (http://www.altan.hr/snow/index.html)
+			 * Visit Dynamic Drive DHTML code library (http://www.dynamicdrive.com/) for full source code
+			 * Last updated Nov 9th, 05' by DD. This notice must stay intact for use
+			 * Using CSB or Trellix:  use an INSERT HTML box to hold your script and put your js and images into web components (webgem in Trellix).  Then you MUST change each gEMDIR to GEMDIR before using code!
+			 ******************************************/
 
-	blockchainCtrl.$inject = ['$scope', 'config', '$interval', 'blockchain'];
-	angular
-		.module('app.ctrls')
-		.controller('blockchainCtrl', blockchainCtrl);
-
-	angular
-		.module('app.drtvs')
-		.directive('blockchainPlugin', blockchainPlugin);
-
-	/**
-	 * @param $scope
-	 * @param config
-	 * @param $interval
-	 * @param blockchain
-	 */
-	function blockchainCtrl($scope, config, $interval, blockchain)
-	{
-		$scope.loading = false;
-		$scope.value = 10;
-		$scope.snow = snow;
-		$scope.animating = false;
-		init();
-
-		$interval(function ()
-		{
-			init();
-		}, 15000);
-
-		/**
-		 *
-		 */
-		function init()
-		{
-			$scope.loading = true;
-
-			blockchain
-				.getBlockchainData()
-				.then(success, fail)
-				.finally(always);
-
-			function success(response)
-			{
-				$scope.chainData = response;
-				$scope.chainData.lastUpdated = moment.unix($scope.chainData.lastUpdated).local().format('DD-MM-YYYY HH:mm:ss');
-
-				var currentEst = _.clone(blockchain.getEstHalveTime()),
-					estHalveDate = moment().add(Math.round((($scope.chainData.timeTillHalve * 60) * 60) * 1000), 'milliseconds');
-
-				blockchain.setEstHalveTime(estHalveDate);
-
-				if (currentEst.time !== estHalveDate)
-					$scope.$emit('blockchain.estTime');
-			}
-
-			function fail()
-			{
-
-			}
-
-
-			function always()
-			{
-				$scope.loading = false;
-			}
-		}
-
-		function snow() {
-
-			//Configure below to change URL path to the snow image
-			var snowsrc = "/assets/img/favicon.ico";
-			// Configure below to change number of snow to render
+				//Configure below to change URL path to the snow image
+			var snowsrc = "/assets/img/vertcoin-logo.png";
+// Configure below to change number of snow to render
 			var no = 20;
-			// Configure whether snow should disappear after x seconds (0=never):
+// Configure whether snow should disappear after x seconds (0=never):
 			var hidesnowtime = 0;
-			// Configure how much snow should drop down before fading ("windowheight" or "pageheight")
+// Configure how much snow should drop down before fading ("windowheight" or "pageheight")
 			var snowdistance = "pageheight";
-			var snowtimer;
 
-			///////////Stop Config//////////////////////////////////
+///////////Stop Config//////////////////////////////////
 
 			var ie4up = (document.all) ? 1 : 0;
 			var ns6up = (document.getElementById && !document.all) ? 1 : 0;
@@ -107,8 +47,6 @@
 			am = new Array();
 			stx = new Array();
 			sty = new Array();
-			var snow = document.getElementById("snow");
-
 			for (i = 0; i < no; ++i) {
 				dx[i] = 0;                        // set coordinate variables
 				xp[i] = Math.random() * (doc_width - 50);  // set position variables
@@ -117,21 +55,11 @@
 				stx[i] = 0.02 + Math.random() / 10; // set step variables
 				sty[i] = 0.7 + Math.random();     // set step variables
 				if (ie4up || ns6up) {
-
-						var node = document.createElement("div");
-						var a = document.createElement('img');
-
-						a.src = snowsrc;
-
-						node.id = "dot" + i;
-						node.style.position = 'absolute';
-						node.zIndex = i + 1000;
-						node.visibility = 'visible';
-						node.top = '15px';
-						node.left = '15px';
-						node.appendChild(a);
-
-						snow.appendChild(node);
+					if (i == 0) {
+						document.write("<div id=\"dot" + i + "\" style=\"POSITION: absolute; Z-INDEX: " + i + "; VISIBILITY: visible; TOP: 15px; LEFT: 15px;\"><a href=\"http://dynamicdrive.com\"><img src='" + snowsrc + "' border=\"0\"><\/a><\/div>");
+					} else {
+						document.write("<div id=\"dot" + i + "\" style=\"POSITION: absolute; Z-INDEX: " + i + "; VISIBILITY: visible; TOP: 15px; LEFT: 15px;\"><img src='" + snowsrc + "' border=\"0\"><\/div>");
+					}
 				}
 			}
 
@@ -154,7 +82,7 @@
 			}
 
 			function hidesnow() {
-				if (window.snowtimer) clearTimeout(snowtimer);
+				if (window.snowtimer) clearTimeout(snowtimer)
 				for (i = 0; i < no; i++) document.getElementById("dot" + i).style.visibility = "hidden"
 			}
 
@@ -164,16 +92,11 @@
 				if (hidesnowtime > 0)
 					setTimeout("hidesnow()", hidesnowtime * 1000)
 			}
-		}
 
-	}
 
-	function blockchainPlugin()
-	{
-		return {
-			restrict: 'E',
-			templateUrl: 'js/plugins/blockchain/blockchain.html',
-			controller: 'blockchainCtrl'
-		};
-	}
-})();
+    </script>
+</head>
+<body>
+
+</body>
+</html>
