--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,13 @@
 			}, i[r].l = 1 * new Date(); a = s.createElement(o),
 				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
 		})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+
     </script>
     <base href="/">
 </head>
 
-<body>
+<body ng-controller="styleCtrl" ng-style="themeStyle">
 <ng-view></ng-view>
 
 </body>
