--- a/public/js/plugins/mining/mining.html
+++ b/public/js/plugins/mining/mining.html
@@ -1,14 +1,14 @@
 <div class="wrapper-top">
     <div class="legend" ng-class="{'dark': darkTheme}">Mining</div>
 </div>
-<div class="row timer-container">
+<!-- <div class="row timer-container">
     <div class="col-lg-12 col-md-12 col-sm-12">
         <div ng-if="time">
             <timer time="time"></timer>
         </div>
         <div class="est-time">{{ estHalveDate }}</div>
     </div>
-</div>
+</div> -->
 <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="box height-override" ng-class="{'dark': darkTheme}">
@@ -64,12 +64,7 @@
                     <div>
                         <a href="http://scanner2.alwayshashing.com/">http://scanner2.alwayshashing.com/</a>
                     </div>
-                    <div style="margin-top: 10px">
-                    <code><small style="font-size: 78%;">You can support this node by mining on it :) (Recommended for less than 100 MH/s)</small></code>
-                    <div>
-                        <a href="http://31.220.54.16:9181/static/">http://31.220.54.16:9181/static/</a>
-                    </div>
-                    </div>
+                
                 </div>
             </div>
         </div>
